# IV

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md
.github/: copilot-instructions.md
agents/: README.md  architect.md  implementer.md  reviewer.md  security-reviewer.md  tester.md
docs/: AGENT_WORKFLOW.md  AI_INTEGRATION.md  ARCHITECTURE.md  ASYNC_MODEL.md  CONFIGURATION.md  CONTEXT_LEDGER.md  DEFINITION_OF_DONE.md  DEPENDENCY_POLICY.md  ERROR_HANDLING.md  INDEX.md  KEYBINDINGS.md  KNOWN_LIMITATIONS.md  LOGGING.md  MODULE_STRUCTURE.md  PERFORMANCE_BUDGET.md  PROJECT_STATE.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  STATE_MODEL.md  TERMINAL_BACKEND.md  TEST_STRATEGY.md  UX_PRINCIPLES.md
docs/decisions/: 000-template.md  001-workspace-modul-und-persistenz.md  README.md
src/: main.rs
src/app/: mod.rs  startup.rs
src/pane/: mod.rs  navigation.rs  node.rs  tests.rs  tree.rs
src/settings/: mod.rs
src/tab/: mod.rs
src/terminal/: mod.rs  vte_backend.rs
src/ui/: actions.rs  links.rs  mod.rs  pane_view.rs  profile.rs  search.rs  tabs_view.rs  terminal_events.rs  theme.rs  window.rs
src/workspace/: error.rs  layout.rs  mod.rs  profile.rs  start_config.rs  storage.rs
