[package]
name = "iv"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
publish = false

[dependencies]
adw = { package = "libadwaita", version = "0.9.2", default-features = false }
gtk = { package = "gtk4", version = "0.11.4", default-features = false, features = ["v4_10"] }
libc = "0.2"
vte = { package = "vte4", version = "0.10.0", default-features = false, features = ["v0_70"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
